<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Machine Service</string>
    <string name="loading">Loading...</string>
    <string name="login_failed">Login Failed</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="report_problem">Report problem</string>
    <string name="tasks">Tasks</string>
    <string name="machines">Machines</string>
    <string name="machine_detail">Machine Detail</string>
    <string name="qr_code">QR code scanner</string>
    <string name="issues">Issues</string>
    <string name="issue_detail">Issue detail</string>
    <string name="machine_service">Machine service</string>
    <string name="signature">Signature:</string>
    <string name="keywords">Keywords</string>
    <string name="component_name">Component name</string>
    <string name="clear">Clear</string>
    <string name="task_detail">Task detail</string>
    <string name="date_from">date from</string>
    <string name="date_to">date to</string>
    <string name="search_by_name">Search by name...</string>
    <string name="search_by_keywords">Search by keywords...</string>
    <string name="description">Description:</string>
    <string name="description_hint">Description</string>
    <string name="solved">solved:</string>
    <string name="service_success">Check if service passed successfully</string>
    <string name="solution">Solution</string>
    <string name="solved_status">SOLVED</string>
    <string name="not_found">Machine not found</string>
    <string name="not_solved_status">NOT SOLVED</string>
    <string name="view_issues">View issues</string>
    <string name="download_instruction">Download instruction:</string>
    <string name="make_service">Make service</string>
    <string name="save_issue">Save issue</string>
    <string name="save_service">Save service</string>
    <string name="task_solved">This task was solved</string>
    <string name="report_problem_description">If you see any issues with app please report it</string>
    <string name="hint_app_problem_description">Please enter description</string>
    <string name="keywords_hint">Keywords</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="data_send_success">Data send success</string>
    <string name="token_time_expired">Token time expired</string>
    <string name="data_send_faild">Error during uploading data</string>
    <string name="login_success">Login success</string>
    <string name="logout">Logout</string>
    <string name="login_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="remember_me_hint">Remember me</string>
    <string name="btn_login_text">Login</string>
    <string name="menu_main">Main menu</string>
    <string name="login_user">Username: </string>
    <string name="full_name">Full name: </string>
    <string name="department_name">Department:</string>
    <string name="btn_send_problem">Send Problem</string>
    <string name="cannot_be_empty">This field cannot be empty</string>

    <string name="title_activity_report_problem">Report Problem</string>

</resources>
