<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="280dp"
        android:background="@drawable/main_icon"
        android:theme="@style/AppTheme.Dark"
        android:orientation="vertical">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nav_header_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_user"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_darker" />

        <TextView
            android:id="@+id/nav_header_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_darker" />

        <TextView
            android:id="@+id/nav_header_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department_name"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_darker" />

    </LinearLayout>

</LinearLayout>
