<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/primary"
            android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="164dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/main_icon" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

            <EditText android:id="@+id/login"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:hint="@string/login_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

            <EditText android:id="@+id/et_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password_hint"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:padding="10dp"
                android:text="@string/btn_login_text"/>

    </LinearLayout>
</ScrollView>