<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ReportProblemActivity">

        <include layout="@layout/app_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:text="@string/report_problem_description"
                        android:textAppearance="?attr/textAppearanceHeadline4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_problem_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/hint_app_problem_description"
                        android:inputType="textMultiLine"
                        android:maxLines="15"
                        android:minLines="15" />

                    <EditText
                        android:id="@+id/et_keywords"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:hint="@string/keywords_hint"
                        android:maxLines="1"
                        android:minLines="1" />
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_send_report"
                android:layout_width="fill_parent"
                android:layout_height="65dp"
                android:background="@drawable/layout_bg"
                android:padding="15dp"
                android:layout_margin="7dp"
                android:text="@string/btn_send_problem"
                android:textAllCaps="true"
                android:onClick="sendProblem"
                android:textColor="@color/primary_dark" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>