<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/constraint_layout"
            android:layout_height="match_parent"
            tools:context=".activity.MachineServiceDetailActivity">

        <include layout="@layout/app_bar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_component_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:minLines="2"
                        android:gravity="bottom"
                        android:hint="@string/component_name"
                        android:textColor="@color/primary_darker"
                        android:textSize="28sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="2dp"
                        android:hint="@string/description"
                        android:minLines="16"
                        android:gravity="bottom"
                        android:textColor="@color/primary_darker"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="@id/parent"
                        app:layout_constraintTop_toBottomOf="@+id/tw_title" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_save_service"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_success" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_result"
                android:layout_width="50dp"
                android:layout_height="50dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveService"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout"
            app:layout_constraintEnd_toEndOf="@id/constraint_layout"
            android:text="@string/save_service"
            android:textSize="20sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>